first-pass content templates done

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -138,3 +138,407 @@ $menu-label-color: $white-ter
     text-align: center;
     max-width: 70%;
     margin: 0 0 1em;
+
+// ------------- OLD CSS -------------------
+// old App.css
+// body, html
+//   background-color: #121621
+//   font-family: Lato
+//   color: #c0c5ce
+
+// .App
+//   display: flex
+//   flex-direction: column
+
+// section
+//   padding-top: 4vh
+
+// .bio-wrapper
+//   display: flex
+//   align-items: flex-start
+
+// .bio
+//   font-size: 1.5rem
+//   margin: 0
+
+// .headshot
+//   height: 16rem
+//   margin-right: 2rem
+
+// .bio-action
+//   display: flex
+//   align-items: center
+//   margin-top: 10vh
+
+// .emphasis
+//   color: #00ccb8
+
+// .button
+//   margin-right: 5vw
+//   background-color: transparent
+//   padding: 16px 32px
+//   display: inline-flex
+//   align-items: center
+//   color: #00ccb8
+//   font-size: 1.3rem
+//   font-weight: bold
+//   border: 2px solid #00ccb8
+//   outline: none
+//   border-radius: 16px
+//   transition: all ease 0.2s
+//   cursor: pointer
+//   text-decoration: none
+
+//   &:hover
+//     background-color: #00ccb8
+//     color: #121621
+
+//   &:active
+//     background-color: #00998a
+//     border: 2px solid #00998a
+
+// #section-0
+//   padding: 20vh 10vw 25vh 15vw
+
+// .my-name
+//   color: white
+//   font-weight: bold
+//   position: relative
+//   top: -4rem
+//   margin: 0 0 1rem 0
+//   font-size: 3rem
+
+// #section-1, #section-2, #section-3
+//   display: flex
+//   flex-direction: column
+//   align-items: center
+//   justify-content: center
+//   padding-bottom: 20vh
+
+// #section-4
+//   display: flex
+//   align-items: center
+//   justify-content: flex-start
+//   padding-left: 10vw
+//   padding-top: 0
+//   height: 100vh
+
+// .section-title
+//   align-self: flex-start
+//   padding-left: 5vw
+//   padding-bottom: 1vw
+//   font-size: 2rem
+
+// #contact-title
+//   display: none
+
+// .contact-form
+//   display: flex
+//   flex-direction: column
+//   align-items: flex-start
+
+//   input[type='text']
+//     background-color: transparent
+//     border: none
+//     color: #c0c5ce
+//     padding: 8px
+//     outline: none
+//     transition: all ease 0.2s
+//     font-size: 1rem
+//     margin-bottom: 24px
+//     border-bottom: 1px solid #c0c5ce
+//     border-top: 1px solid transparent
+//     resize: none
+//     width: 30vw
+
+//   textarea
+//     background-color: transparent
+//     border: none
+//     color: #c0c5ce
+//     padding: 8px
+//     outline: none
+//     transition: all ease 0.2s
+//     font-size: 1rem
+//     margin-bottom: 24px
+//     border-bottom: 1px solid #c0c5ce
+//     border-top: 1px solid transparent
+//     resize: none
+//     width: 30vw
+//     width: 40vw
+
+//   input[type='text']:focus, textarea:focus
+//     border-top: 0px solid transparent
+//     border-bottom: 2px solid #e2e4e9
+//     color: #e2e4e9
+
+//   input[type='submit']
+//     padding: 8px 16px
+//     color: #00ccb8
+//     border: 1px solid #00ccb8
+//     transition: all ease 0.2s
+//     font-size: 1rem
+//     background-color: transparent
+//     border-radius: 8px
+//     outline: none
+
+//     &:hover
+//       color: #121621
+//       background-color: #00ccb8
+//       cursor: pointer
+
+//     &:active
+//       background-color: #00998a
+//       border: 1px solid #00998a
+
+//   div
+//     display: flex
+//     align-items: center
+
+//     input[type="text"]
+//       font-size: 0.9rem
+//       margin-right: 2vw
+//       width: calc(14vw - 8px)
+
+// .banner-wrapper
+//   height: 100%
+//   width: 50vw
+//   display: flex
+//   align-items: center
+
+// .contact-banner
+//   width: 80%
+
+// @media only screen and (max-width: 1100px)
+//   .bio-wrapper
+//     flex-direction: column
+
+//   .headshot
+//     margin-bottom: 2rem
+
+//   .bio-action
+//     margin-top: 4rem
+
+//   #section-0
+//     height: auto
+//     padding-bottom: 20rem
+//     padding-top: 5rem
+
+//   #section-4
+//     flex-direction: column
+//     height: auto
+//     padding-left: 0
+
+//     .contact-form
+//       padding: 10rem 0 18rem 0
+//       width: 80%
+//       margin: 0 auto
+
+//   .section-title
+//     padding-left: 2rem
+
+//   #contact-title
+//     display: initial
+
+//   .contact-form
+//     div input[type="text"]
+//       width: calc(37vw - 8px)
+
+//     input[type='text'], textarea
+//       width: calc(80vw - 16px)
+
+//   .banner-wrapper
+//     display: none
+
+// // old SideNav.css
+// .sidebar
+//   display: flex
+//   flex-direction: column
+//   justify-content: space-between
+//   align-items: center
+//   height: 12.5vh
+//   position: fixed
+//   width: 1rem
+//   top: 43.75vh
+//   left: 2vw
+
+//   div
+//     height: 0.5rem
+//     width: 0.5rem
+//     border-radius: 100%
+//     background-color: #596273
+//     outline: none
+//     cursor: pointer
+//     transition: all ease 0.2s
+//     margin-bottom: 0.1rem
+//     margin-left: 0.1rem
+
+//     &:hover
+//       background-color: white
+
+//     &.active
+//       background-color: white
+//       margin-bottom: 0
+//       margin-left: 0
+//       height: 0.6rem
+//       width: 0.6rem
+
+// @media only screen and (max-width: 1100px)
+//   .sidebar
+//     top: 0.8rem
+
+// // old Slider.css
+// .slider
+//   width: 80vw
+
+//   .slick-arrow
+//     &.slick-prev
+//       left: -5vw
+//       top: 1.5rem
+
+//       &:before
+//         font-family: 'Material Icons'
+//         font-size: 4rem
+//         content: '\e5cb'
+//         color: #c0c5ce
+//         position: absolute
+//         top: -22px
+//         left: 0
+
+//     &.slick-next
+//       right: -5vw
+//       top: 1.5rem
+
+//       &:before
+//         font-family: 'Material Icons'
+//         font-size: 4rem
+//         content: '\e5cc'
+//         color: #c0c5ce
+//         position: absolute
+//         right: 0
+//         top: -22px
+
+//   .slick-dots
+//     button::before
+//       color: #c0c5ce
+
+//     .slick-active button:before
+//       color: #c0c5ce
+//       opacity: 1
+
+// .slick-slide
+//   > div > div
+//     outline: none
+
+//   .slide-content
+//     display: flex
+//     align-items: flex-start
+//     overflow-y: scroll
+
+//     .story
+//       flex: 1
+//       line-height: 1.3rem
+//       color: #e2e4e9
+
+//       .button
+//         margin-top: 2rem
+
+//   img.store-logo
+//     height: 32px
+//     margin-right: 16px
+//     display: inline-block
+
+//   .slide-content .media
+//     flex: 1
+//     display: flex
+//     flex-direction: column
+//     align-items: center
+//     height: 60vh
+//     overflow-y: scroll
+
+//     a
+//       outline: none
+//       width: 80%
+
+//     img
+//       width: 100%
+//       margin-bottom: 1rem
+//       margin-top: 1rem
+//       border-radius: 16px
+
+//     > img
+//       width: 80%
+
+//   .story li
+//     margin-bottom: 0.5rem
+
+//   .brand
+//     display: flex
+//     align-items: flex-start
+//     justify-content: flex-start
+//     color: white
+
+//     .logo
+//       height: 3rem
+//       margin-right: 1rem
+
+//       &.cropped
+//         border-radius: 1rem
+//         background-color: white
+//         padding: 4px
+
+//     .company
+//       margin-top: 0.5rem
+
+//   .position
+//     margin: 0
+//     margin-top: 1rem
+//     color: white
+
+//   .time
+//     color: #d4d7de
+//     margin-top: 0.25rem
+//     margin-bottom: 0
+
+// @media only screen and (max-width: 1100px)
+//   .slick-slide .slide-content
+//     flex-direction: column
+//     align-items: center
+
+//     .media
+//       flex: none
+//       flex-direction: row
+//       justify-content: flex-start
+//       height: 13vh
+//       margin-top: 5vh
+//       margin-bottom: 2vh
+//       width: 80vw
+//       overflow-x: scroll
+
+//       a
+//         height: 100%
+//         width: auto
+
+//       img
+//         width: auto
+//         height: 100%
+//         margin: 0
+//         margin-right: 2rem
+//         border-radius: 12px
+
+//   .slider .slick-arrow
+//     &.slick-prev, &.slick-next
+//       top: 1.5rem
+//       z-index: 1
+
+//   .slick-slide
+//     .brand
+//       width: fit-content
+//       padding: 0 32px
+
+//     .meta
+//       display: flex
+//       flex-direction: column
+//       align-items: center
+
+//       .position, .time
+//         text-align: center
